[gd_scene load_steps=12 format=2]

[ext_resource path="res://mods-unpacked/RampagingHippy-Archipelago/ui/menus/run/load_ap_run.gd" type="Script" id=1]
[ext_resource path="res://resources/themes/base_theme.tres" type="Theme" id=2]
[ext_resource path="res://ui/menus/shop/shop_background.png" type="Texture" id=3]
[ext_resource path="res://ui/menus/global/my_menu_button.gd" type="Script" id=4]
[ext_resource path="res://resources/fonts/actual/base/font_40_outline_thick.tres" type="DynamicFont" id=5]
[ext_resource path="res://ui/hud/ui_gold.tscn" type="PackedScene" id=6]
[ext_resource path="res://ui/menus/global/popup_manager.tscn" type="PackedScene" id=8]
[ext_resource path="res://ui/menus/shop/stats_container.tscn" type="PackedScene" id=10]
[ext_resource path="res://ui/menus/shop/inventory_container.tscn" type="PackedScene" id=11]
[ext_resource path="res://ui/menus/shop/stat_popup.tscn" type="PackedScene" id=12]
[ext_resource path="res://ui/menus/shop/item_popup.tscn" type="PackedScene" id=13]

[node name="LoadSavedRun" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="PopupManager" parent="." instance=ExtResource( 8 )]

[node name="Background" type="TextureRect" parent="."]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_lock_": true
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -4.0
margin_bottom = 136.0
size_flags_vertical = 0
theme = ExtResource( 2 )
custom_constants/margin_right = 32
custom_constants/margin_top = 32
custom_constants/margin_left = 32
custom_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 32.0
margin_top = 32.0
margin_right = 1888.0
margin_bottom = 1626.0
custom_constants/separation = 25
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 1856.0
margin_bottom = 65.0

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 267.0
margin_bottom = 65.0
grow_vertical = 0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "MENU_BACK"
script = ExtResource( 4 )

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 271.0
margin_top = 10.0
margin_right = 1856.0
margin_bottom = 55.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 5 )
text = "Resume saved run?"
align = 1

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
self_modulate = Color( 1, 1, 1, 0.784314 )
margin_left = 48.0
margin_top = 90.0
margin_right = 1808.0
margin_bottom = 1504.0
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/PanelContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 1755.0
margin_bottom = 1409.0
alignment = 1

[node name="StatsContainer" parent="MarginContainer/VBoxContainer/PanelContainer/HBoxContainer" instance=ExtResource( 10 )]
unique_name_in_owner = true
margin_top = 0.0
margin_right = 400.0
margin_bottom = 1404.0
focus_neighbour_top = NodePath("../../../HBoxContainer3/ResumeButton")

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer/PanelContainer/HBoxContainer"]
margin_left = 404.0
margin_right = 1750.0
margin_bottom = 1404.0
custom_constants/margin_right = 32
custom_constants/margin_top = 32
custom_constants/margin_left = 32
custom_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/PanelContainer/HBoxContainer/MarginContainer2"]
margin_left = 32.0
margin_top = 32.0
margin_right = 1314.0
margin_bottom = 1372.0
custom_constants/separation = 50

[node name="GoldContainer" parent="MarginContainer/VBoxContainer/PanelContainer/HBoxContainer/MarginContainer2/VBoxContainer" instance=ExtResource( 6 )]
unique_name_in_owner = true
visible = false
anchor_left = 0.0
anchor_right = 0.0
margin_left = 0.0
margin_top = 0.0
margin_right = 1282.0
margin_bottom = 64.0
alignment = 0

[node name="WeaponsContainer" parent="MarginContainer/VBoxContainer/PanelContainer/HBoxContainer/MarginContainer2/VBoxContainer" instance=ExtResource( 11 )]
unique_name_in_owner = true
margin_right = 1282.0
margin_bottom = 175.0
focus_neighbour_top = NodePath("../../../../../HBoxContainer3/NewRunButton")
set_neighbour_top = true
reserve_column_count = 6
reserve_row_count = 1

[node name="ItemsContainer" parent="MarginContainer/VBoxContainer/PanelContainer/HBoxContainer/MarginContainer2/VBoxContainer" instance=ExtResource( 11 )]
unique_name_in_owner = true
margin_top = 225.0
margin_right = 1282.0
margin_bottom = 718.0
focus_neighbour_left = NodePath("../../../StatsContainer")
focus_neighbour_bottom = NodePath("../../../../../HBoxContainer3/NewRunButton")
size_flags_vertical = 5
set_neighbour_bottom = true
set_neighbour_right = true
reserve_column_count = 12
reserve_row_count = 4

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 1529.0
margin_right = 1856.0
margin_bottom = 1594.0
size_flags_vertical = 2
custom_constants/separation = 25
alignment = 1

[node name="ResumeButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
margin_left = 578.0
margin_right = 895.0
margin_bottom = 65.0
rect_min_size = Vector2( 300, 0 )
focus_neighbour_left = NodePath("../ExitButton")
text = "MENU_RESUME"
script = ExtResource( 4 )

[node name="NewRunButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
margin_left = 920.0
margin_right = 1278.0
margin_bottom = 65.0
rect_min_size = Vector2( 300, 0 )
text = "MENU_NEW_RUN"
script = ExtResource( 4 )

[node name="ExitButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
visible = false
margin_left = 999.0
margin_right = 1599.0
margin_bottom = 65.0
rect_min_size = Vector2( 600, 0 )
focus_neighbour_right = NodePath("../ResumeButton")
text = "MENU_RETURN_MAIN"
script = ExtResource( 4 )

[node name="ItemPopup" parent="." instance=ExtResource( 13 )]
visible = false
margin_left = 50.0
margin_top = 50.0
margin_right = 50.0
margin_bottom = 50.0

[node name="StatPopup" parent="." instance=ExtResource( 12 )]
visible = false
margin_left = 50.0
margin_top = 50.0
margin_right = 50.0
margin_bottom = 50.0

[connection signal="element_pressed" from="PopupManager" to="." method="_on_PopupManager_element_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer3/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer3/NewRunButton" to="." method="_on_NewRunButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer3/ExitButton" to="." method="_on_ExitButton_pressed"]
